test/interaction/Issue7807.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "?0 : _1 Sort _0 [ at Issue7807.agda:12.5-16 ] _1 : _0 [ at Issue7807.agda:12.5-16 ] _4 : Set [ at Issue7807.agda:12.5-16 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Unsolved constraints" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-give-action 0 'paren)
(agda2-status-action "")
(agda2-info-action "*All Done*" "" nil)
((last . 1) . (agda2-goals-action '()))
